# pp2-kolokwium

./: .gitignore  PtrCStringVector.cpp  README.md  main.cpp
.github/workflows/: tests.yml
tests/: CMakeLists.txt  PtrCStringVectorTests.cpp
